--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "dingo/api": "1.0.x@dev",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "^0.8.2",
+        "tymon/jwt-auth": "^1.0@dev",
+        "prettus/l5-repository": "^2.6",
+        "metricloop/laravel-transformer-maker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
