--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "tymon/jwt-auth": "^1.0@dev",
         "prettus/l5-repository": "^2.6",
         "metricloop/laravel-transformer-maker": "^1.0",
-        "orangehill/iseed": "^2.2"
+        "orangehill/iseed": "^2.2",
+        "barryvdh/laravel-debugbar": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
