--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "考生咨询网站相关api文档",
   "title": "招生咨询api说明文档",
-  "url": "http://api.consult.coder4me.cn",
-  "sampleUrl": "http://api.consult.coder4me.cn",
+  "url": "http://api.consult.dev",
+  "sampleUrl": "http://api.consult.dev",
   "header": {
     "title": "招生咨询",
     "content": ""
@@ -20,11 +20,7 @@
   "apidoc": "0.2.0",
   "generator": {
     "name": "apidoc",
-<<<<<<< HEAD
-    "time": "2016-12-13T09:53:52.952Z",
-=======
-    "time": "2016-12-13T10:19:14.815Z",
->>>>>>> c115673db96a57ca234f16f04ccc696601925d0b
+    "time": "2016-12-14T15:03:23.968Z",
     "url": "http://apidocjs.com",
     "version": "0.16.1"
   }
